# api_blog_rust

./: .dockerignore  .env.template  .gitignore  Cargo.toml  Dockerfile  README.md  blog_rust.db  blog_rust.db-shm  blog_rust.db-wal  docker-compose.yml  entrypoint.sh
API Blog - RUST/: Delete a post.bru  Get one post.bru  Login.bru  Register user.bru  Update Post.bru  bruno.json
API Blog - RUST/Posts/: Create post.bru  Delete a post.bru  Get List of posts.bru  Get one post.bru  Update Post.bru  folder.bru
API Blog - RUST/Profile/: Get profile.bru  Update profile.bru
API Blog - RUST/Users/: Create user.bru  Delete a user.bru  Get list of users.bru  Get one user.bru  Login.bru  Update User.bru
migrations/: 20250615213932_posts.up.sql  20250616112307_init.down.sql  20250616112307_init.up.sql  20250616184459_user_role.down.sql  20250616184459_user_role.up.sql  20250617185255_user_name.down.sql  20250617185255_user_name.up.sql
src/: lib.rs  main.rs
src/api/: error.rs  handlers.rs  login.rs  post.rs  user.rs
src/application/: post_service.rs  user_service.rs
src/config/: mod.rs  settings.rs
src/core/: auth.rs  jwt_middleware.rs  keys.rs  server.rs  tls.rs
src/core/middlewares/: admin.rs
src/domain/: error.rs  post.rs  repository.rs  user.rs  validation.rs
src/domain/model/: post.rs  user.rs
src/infra/: sqlite_post_repo.rs  sqlite_user_repo.rs
src/infrastructure/auth/: admin.rs  jwt.rs  mod.rs  password.rs
src/infrastructure/db/: mod.rs
src/infrastructure/persistence/sqlite/: post_repo.rs  user_repo.rs
src/infrastructure/security/: cors.rs  headers.rs  hsts.rs
src/interfaces/api/: error.rs  validation.rs
src/interfaces/api/dto/: post.rs  user.rs
src/interfaces/api/handlers/: login.rs  post.rs  profile.rs  register.rs  user.rs
