[package]
name = "api_back_trio"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"              # framework HTTP
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"           # (dé)serialisation JSON
sqlx = { version = "0.6", features = ["sqlite", "runtime-tokio-native-tls", "macros"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"            # pour définir des erreurs claires
dotenv = "0.15"              # chargement des vars d’environnement