[[bin]]
name = "blog-api"
path = "src/main.rs"

[package]
name = "api_back_trio"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = { version = "4", features = ["openssl"] }              # framework HTTP
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"           # (dé)serialisation JSON
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-native-tls", "macros", "uuid", "chrono"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"            # pour définir des erreurs claires
dotenv = "0.15"              # chargement des vars d’environnement
async-trait = "0.1.88"
once_cell = "1.21.3"
anyhow = "1.0.98"
openssl = "0.10"            # pour la gestion des certificats SSL
config = "0.15.11"
env_logger = "0.11.8"
argon2 = "0.5"
rand = "0.8"
rand_chacha = "0.3"
validator = { version = "0.20", features = ["derive"] }
validator_derive = "0.20.0"
jsonwebtoken = "9.3.1"
actix-web-httpauth = "0.8.2"
futures-util = "0.3.31"
log = "0.4.27"
actix-cors = "0.7.1"
regex = "1.11.1"
nonzero_ext = "0.3.0"
actix-governor = "0.8.0"
